--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,23 +8,14 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Experience"
+    url: /experience/  
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Projects"
+    url: /projects/
     
   - title: "CV"
-    url: /cv/
+    url: /files/Resume_knk.pdf
     
   # - title: "CV"
   #   url: /cv-json/
